--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "guzzlehttp/guzzle": "^6.0",
         "symfony/property-access": "~3.4 || ~4.0",
         "symfony/property-info": "~3.4 || ~4.0",
-        "symfony/serializer": "^4.0"
+        "symfony/serializer": "~3.4 || ~4.0"
     },
     "require-dev": {
         "psr/log": "^1.0"
