--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "psr/log": "^1.0"
     },
     "suggest": {
-        "psr/log": "^1.0 is required for using a log functional"
+        "psr/log": "^1.0 is required for using a logging"
     },
     "config": {
         "sort-packages": true
