--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/http-foundation": "~3.4 || ~4.0",
         "symfony/property-access": "~3.4 || ~4.0",
         "symfony/property-info": "~3.4 || ~4.0",
-        "symfony/serializer": "~3.4 || ~4.0"
+        "symfony/serializer": "~3.4 || ~4.0",
+        "symfony/validator": "~3.4 || ~4.0"
     },
     "require-dev": {
         "psr/log": "^1.0"
