--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "php": ">=7.2",
         "guzzlehttp/guzzle": "^6.0",
         "symfony/http-foundation": "~3.4 || ~4.0",
+        "symfony/options-resolver": "~3.4 || ~4.0",
         "symfony/property-access": "~3.4 || ~4.0",
         "symfony/property-info": "~3.4 || ~4.0",
         "symfony/serializer": "~3.4 || ~4.0",
