group namespace for library, symfony bridge in dev

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "MinistryOfTruthClient\\": ["src/"]
+            "SymfonyDoge\\MinistryOfTruthClient\\": ["src/"]
         }
     },
     "require": {
