--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "psr/log": "^1.0"
     },
     "suggest": {
-        "psr/log": "^1.0 is required for using a logging"
+        "psr/log": "^1.0 is required for using a logging",
+        "symfony/symfony": "~3.4 || ~4.0 is required for using a Symfony bridge"
     },
     "config": {
         "sort-packages": true
