--- a/src/Bridge/Symfony/Resources/config/uri_builders.yml
+++ b/src/Bridge/Symfony/Resources/config/uri_builders.yml
@@ -1,8 +1,8 @@
 services:
-    symfony_doge.ministry_of_truth_client.uri.builder:
-        alias: 'symfony_doge.ministry_of_truth_client.uri.builder.base'
+    symfony_doge.motc.uri.builder:
+        alias: 'symfony_doge.motc.uri.builder.base'
 
-    symfony_doge.ministry_of_truth_client.uri.builder.base:
+    symfony_doge.motc.uri.builder.base:
         class: SymfonyDoge\MinistryOfTruthClient\Uri\Builder
         arguments:
-            - '%symfony_doge.ministry_of_truth_client.uri.builder.options%'
+            - '%symfony_doge.motc.uri.builder.options%'
