exception handling for client, just a little bit

--- a/src/Bridge/Symfony/Resources/config/serializers.yml
+++ b/src/Bridge/Symfony/Resources/config/serializers.yml
@@ -1,6 +1,6 @@
 services:
     symfony_doge.motc.request.serializer:
-        alias: '@serializer'
+        alias: 'serializer'
 
     symfony_doge.motc.response.deserializer:
-        alias: '@serializer'
+        alias: 'serializer'
